# uniffi-bindgen-cpp

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  askama.toml  build_bindgen.sh  build_bindings.sh  build_scaffolding.sh  build_scaffolding_lib.sh  docker.sh  test_bindings.sh  test_go_bindgen.sh  test_scaffolding_cs.sh  test_scaffolding_go.sh
.github/workflows/: cpp.yml
bindgen/: Cargo.toml
bindgen/src/: main.rs
bindgen/src/bindings/: mod.rs
bindgen/src/bindings/cpp/: mod.rs
bindgen/src/bindings/cpp/gen_cpp/: callback_interface.rs  compounds.rs  custom.rs  enum_.rs  miscellany.rs  mod.rs  object.rs  primitives.rs  record.rs
bindgen/src/bindings/cpp/gen_cpp/filters/: mod.rs
bindgen/src/bindings/cpp/templates/: arith_conv.cpp  arith_conv.hpp  bool_conv.cpp  bool_conv.hpp  bytes_conv.cpp  bytes_conv.hpp  callback.hpp  callback_conv.cpp  callback_conv.hpp  callback_iface_tmpl.cpp  cpp_scaffolding.cpp  custom.cpp  custom.hpp  duration_conv.hpp  duration_helper.cpp  enum.hpp  enum_conv.hpp  enum_tmpl.cpp  err.hpp  err_conv.hpp  err_tmpl.cpp  fn_def.cpp  handle_map.cpp  internal_types.cpp  macros.cpp  map_tmpl.cpp  obj.cpp  obj.hpp  obj_conv.cpp  obj_conv.hpp  opt_conv.hpp  opt_tmpl.cpp  rec.cpp  rec.hpp  rec_conv.hpp  rust_buf_stream.cpp  rust_buf_tmpl.cpp  scaffolding.hpp  seq_conv.hpp  seq_tmpl.cpp  (+7 more)
bindgen/src/bindings/cpp/templates/scaffolding/: callback.cpp  callback.hpp  custom.cpp  custom.hpp  err.cpp  err.hpp  macros.cpp  obj.cpp  obj.hpp  object_map.cpp
cpp-tests/: CMakeLists.txt
cpp-tests/include/: test_common.hpp
cpp-tests/scaffolding_tests/arithmetic/: lib_arithmetic.cpp  lib_arithmetic.hpp  main.cpp
cpp-tests/scaffolding_tests/callbacks/: lib_callbacks.cpp  lib_callbacks.hpp  main.cpp
cpp-tests/scaffolding_tests/chronological/: lib_chronological.cpp  lib_chronological.hpp  main.cpp
cpp-tests/scaffolding_tests/coverall/: lib_coverall.cpp  lib_coverall.hpp
cpp-tests/scaffolding_tests/custom_fixture_callbacks/: Cargo.toml  lib_custom_fixture_callbacks.cpp  lib_custom_fixture_callbacks.hpp  main.cpp
cpp-tests/scaffolding_tests/custom_fixture_callbacks/udl/: custom_callback_fixtures.udl
cpp-tests/scaffolding_tests/custom_types/: lib_custom_types.cpp  lib_custom_types.hpp
cpp-tests/scaffolding_tests/custom_types_builtin/: lib_custom_types_builtin.cpp  lib_custom_types_builtin.hpp
cpp-tests/scaffolding_tests/empty_type/: lib_empty_type.cpp  lib_empty_type.hpp
cpp-tests/scaffolding_tests/enum_style_test/: lib_enum_style_test.cpp  lib_enum_style_test.hpp
cpp-tests/scaffolding_tests/fixture_callbacks/: lib_fixture_callbacks.cpp  lib_fixture_callbacks.hpp
cpp-tests/scaffolding_tests/geometry/: lib_geometry.cpp  lib_geometry.hpp
cpp-tests/scaffolding_tests/rondpoint/: lib_rondpoint.cpp  lib_rondpoint.hpp
cpp-tests/scaffolding_tests/sprites/: lib_sprites.cpp  lib_sprites.hpp  main.cpp
cpp-tests/scaffolding_tests/todolist/: lib_todolist.cpp  lib_todolist.hpp
cpp-tests/scaffolding_tests/traits/: lib_traits.cpp  lib_traits.hpp
cpp-tests/tests/: CMakeLists.txt
cpp-tests/tests/arithmetic/: CMakeLists.txt  main.cpp
cpp-tests/tests/callback/: CMakeLists.txt  main.cpp
cpp-tests/tests/callbacks/: main.cpp
cpp-tests/tests/chronological/: CMakeLists.txt  main.cpp
cpp-tests/tests/coverall/: main.cpp
cpp-tests/tests/custom-types/: CMakeLists.txt
cpp-tests/tests/custom_types/: main.cpp
cpp-tests/tests/custom_types_builtin/: main.cpp
cpp-tests/tests/empty_type/: main.cpp
cpp-tests/tests/enum_style_test/: main.cpp
cpp-tests/tests/error_types_builtin/: main.cpp
cpp-tests/tests/fixture_callbacks/: main.cpp
cpp-tests/tests/geometry/: CMakeLists.txt  main.cpp
cpp-tests/tests/include/: custom_string.hpp
cpp-tests/tests/multilib/: main.cpp
cpp-tests/tests/reserved_field_name/: main.cpp
cpp-tests/tests/rondpoint/: CMakeLists.txt  main.cpp
cpp-tests/tests/sprites/: CMakeLists.txt  main.cpp
cpp-tests/tests/todolist/: CMakeLists.txt  main.cpp
cpp-tests/tests/trait_methods/: main.cpp
cpp-tests/tests/traits/: CMakeLists.txt  main.cpp
cpp-tests/tests/uniffi_docstring/: main.cpp
docs/: CONFIGURATION.md  RELEASE.md  SCAFFOLDING.md
fixtures/: Cargo.toml
fixtures/custom-types-builtin/: Cargo.toml  build.rs  uniffi.toml
fixtures/custom-types-builtin/src/: custom_types_builtin.udl  lib.rs
fixtures/empty-type/: Cargo.toml  build.rs
fixtures/empty-type/src/: empty_type.udl  lib.rs
fixtures/enum-style-test/: Cargo.toml  build.rs  uniffi.toml
fixtures/enum-style-test/src/: enum_style_test.udl  lib.rs
fixtures/error-types-builtin/: Cargo.toml  build.rs
fixtures/error-types-builtin/src/: error_types_builtin.udl  lib.rs
fixtures/reserved-field-name/: Cargo.toml  build.rs
fixtures/reserved-field-name/src/: lib.rs  reserved_field_name.udl
fixtures/src/: lib.rs
src/: main.rs
src/bindings/cpp/: mod.rs
src/bindings/cpp/gen_cpp/: compounds.rs  miscellany.rs  mod.rs  object.rs  primitives.rs  record.rs
src/bindings/cpp/gen_cpp/filters/: mod.rs
src/bindings/cpp/templates/: arith_conv.cpp  bool_helper.cpp  callback_iface_tmpl.cpp  enum_tmpl.cpp  err.hpp  err_conv.hpp  err_tmpl.cpp  fn_def.cpp  fn_tmpl.cpp  helpers.cpp  integral_helper.cpp  macros.cpp  obj.cpp  obj.hpp  obj_tmpl.cpp  opt_tmpl.cpp  rec.cpp  rec_conv.cpp  rec_tmpl.cpp  rust_buf_tmpl.cpp  scaffolding.hpp  str_conv.cpp  str_helper.cpp  types.cpp  wrapper.cpp  wrapper.hpp
