[package]
name = "bindgen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
askama = "0.12.0"
camino = "1.1.6"
clap = { version = "4.4.2", features = ["derive"] }
heck = "0.4.1"
paste = "1"
serde = "1"
uniffi_bindgen = { git = "https://github.com/NordSecurity/uniffi-rs.git", branch = "nordsec.v0.25.x" }
