[workspace]
members = [
    "bindgen",
    "fixtures",
]

resolver = "2"

[workspace.dependencies]
uniffi = { git = "https://github.com/NordSecurity/uniffi-rs.git", brach = "disable_rust_checks" }
uniffi_bindgen = { git = "https://github.com/NordSecurity/uniffi-rs.git", branch = "disable_rust_checks" }
