[package]
name = "uniffi-bindgen-cpp"
version = "0.7.1+v.0.28.3"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
askama = "0.12.0"
camino = "1.1.6"
clap = { version = "4.4.2", features = ["derive"] }
heck = "0.4.1"
paste = "1"
serde = "1"
topological-sort = "0.2.2"
textwrap = "0.16.0"
toml = "0.5"
uniffi_bindgen = { workspace = true }
cargo_metadata = "0.15"
