[package]
name = "uniffi-custom-types-builtin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_cpp_custom_types_builtin"

[dependencies]
uniffi = { git = "https://github.com/NordSecurity/uniffi-rs.git", branch = "nordsec.0.25.0" }
once_cell = "1.12"
paste = "1.0"
thiserror = "1.0"

[build-dependencies]
uniffi = { git = "https://github.com/NordSecurity/uniffi-rs.git", branch = "nordsec.0.25.0", features = ["build"] }